Changes related
1. Integration with Sping AI chat
2. Runtime integration with other models
3. Added better implementation of the protocols